k8s/api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  labels:
    component: api
spec:
  containers:
    - name: api
      image: k8_demo/api:v0.1
      ports:
        - containerPort: 5000
