k8s/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    component: app
spec:
  containers:
    - name: app
      image: k8_demo/app:v0.1
      ports:
        - containerPort: 5000
